--- a/index.html
+++ b/index.html
@@ -7,27 +7,26 @@
                                 "UTF-8" is one of the most widely used character encodings because it supports virtually all characters from different languages, special symbols, and emojis. It ensures that text is displayed correctly, preventing issues like garbled characters or unreadable symbols.
                             -->
     <meta name = "viewport" content ="width=device-width,initial-scale=1.0">
-    <title> MYTUBE </title> 
+    <title> Letlhogonolo Mothoagae </title> 
     <link rel="Stylesheet" href="styles.css">
 </head>
 <body>
     <header class="top-bar">
         <button id="menu-toggle"> &#9776</button> <!-- This is a button element with an ID of "menu-toggle". The content inside the button is the HTML entity for a hamburger icon (three horizontal lines). -->
         <button id="close-sidebar">&times;</button> <!-- This is a button element with an ID of "close-sidebar". The content inside the button is the HTML entity for a multiplication sign (×), which is often used to represent a close or cancel action. -->
-        <div class="logo">MYTUBE </div>
+        <div class="logo">My Profile </div>
     
     </header>
     <div class="sidebar" id="sidebar">  
         <nav class="nav-links">
-            <a href="https://www.youtube.com">Home</a>
-            <a href="https://www.youtube.com/shorts">Shorts</a>
-            <a href="https://www.youtube.com/feed/subscriptions">Subscriptions</a>
+            <a href="index.html">Home</a>
+            <a href="#s">About</a>
+            <a href="#">Education</a>
             <hr> <!--It is used to create a horizontal line that visually separates sections of content on a webpage.-->
-            <a href="https://www.youtube.com/feed/history">History</a>
-            <a href="https://www.youtube.com/feed/playlists">Playlists</a>
-            <a href="#">Your Vids</a>
-            <a href="https://www.youtube.com/playlist?list=WL">Watch Later</a>
-            <a href="https://www.youtube.com/playlist?list=LL">Liked Vids</a>
+            <a href="#">Projects</a>
+            <a href="#">Certifications</a>
+            <a href="#">Contact Details</a>
+            <a href="#">Hobbies and Other Activities</a>
             <hr>
             <div class="section-title"> Subscriptions</div>
         </nav>
@@ -40,7 +39,10 @@
     <div class="overlay" id="overlay"></div>
     <div class="main-content"> 
         <h1>Welcome to MyTube</h1>
-        <p>This is where the content goes</p>
+        <p>
+            My name is Letlhogonolo Mothoagae, I am a final year student at North West University (Mafikeng Campus) and I am currently enrolled for a BSc degree in Computer Science and Electronics.
+            I am passionate about Tech and all things related to tech, I seek to become a full stack developer. I also have a love for Web Development, Cyber Security, Cloud Computing and Network.
+        </p>
     </div> 
 <script src="script.js"></script>
 </body>
