--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     </div>
     <div class="overlay" id="overlay"></div>
     <div class="main-content"> 
-        <h1>Welcome to MyTube</h1>
+        <h1>Hey there 👋, Welcome to My Profile</h1>
         <p>
             My name is Letlhogonolo Mothoagae, I am a final year student at North West University (Mafikeng Campus) and I am currently enrolled for a BSc degree in Computer Science and Electronics.
-            I am passionate about Tech and all things related to tech, I seek to become a full stack developer. I also have a love for Web Development, Cyber Security, Cloud Computing and Network.
+            I am passionate about Tech and all things related to tech, I seek to become a full stack developer. I also have a love for Web Development, Cyber Security, Cloud Computing and Networks.
         </p>
     </div> 
 <script src="script.js"></script>
