Added more information

--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
         <p>
             My name is Letlhogonolo Mothoagae, I am a final year student at North West University (Mafikeng Campus) and I am currently enrolled for a BSc degree in Computer Science and Electronics.
             I am passionate about Tech and all things related to tech, I seek to become a full stack developer. I also have a love for Web Development, Cyber Security, Cloud Computing and Networks.
+
+            Besides tech I also have a love for social media management and I am currently the Social Media Manager for MTR VISION 30 
+            which is a Property management business which focuses on providing Accreditted Student Accommodations for North West University students.
+            You can view the business on the following social media platforms:
+            <ul>
+                <li><a href="https://www.facebook.com/mtrvision30">Facebook</a></li>
+                <li><a href="https://www.instagram.com/mtrvision30/">Instagram</a></li>
+                <li><a href="https://www.linkedin.com/company/mtr-vision-30/">LinkedIn</a></li>
         </p>
     </div> 
 <script src="script.js"></script>
