Added MTR VISION 30 HTML SITE

--- a/index.html
+++ b/index.html
@@ -45,11 +45,9 @@
 
             Besides tech I also have a love for social media management and I am currently the Social Media Manager for MTR VISION 30 
             which is a Property management business which focuses on providing Accreditted Student Accommodations for North West University students.
-            You can view the business on the following social media platforms:
-            <ul>
-                <li><a href="https://www.facebook.com/mtrvision30">Facebook</a></li>
-                <li><a href="https://www.instagram.com/mtrvision30/">Instagram</a></li>
-                <li><a href="https://www.linkedin.com/company/mtr-vision-30/">LinkedIn</a></li>
+           <br>
+            To learn more about MTR VISION 30 <a href="mtrvision30.html">click here</a>.
+            <br>
         </p>
     </div> 
 <script src="script.js"></script>
