Added about html file

--- a/mtrvision30.html
+++ b/mtrvision30.html
@@ -28,7 +28,7 @@
             <a href="#">Contact Details</a>
             <a href="#">Hobbies and Other Activities</a>
             <hr>
-            <div class="section-title"> Subscriptions</div>
+            <!--<div class="section-title"> Subscriptions</div> -->
         </nav>
         
         <!--Moves the theme toggle button to the bottom-->
@@ -38,7 +38,7 @@
     </div>
     <div class="overlay" id="overlay"></div>
     <div class="main-content"> 
-        <h1>MTR VISIOB 39</h1>
+        <h1>MTR VISION 30</h1>
         <p>
             MTR VISION 30 pty(ltd) is a Property management business which focuses on providing Accreditted Student Accommodations for North West University students.
 
