linked the about profile

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <div class="sidebar" id="sidebar">  
         <nav class="nav-links">
             <a href="index.html">Home</a>
-            <a href="#s">About</a>
+            <a href="about.html">About</a>
             <a href="#">Education</a>
             <hr> <!--It is used to create a horizontal line that visually separates sections of content on a webpage.-->
             <a href="#">Projects</a>
