--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="sidebar" id="sidebar">  
         <nav class="nav-links">
             <a href="index.html">Home</a>
-            <a href="#s">About</a>
+            <a href="about.html">About</a>
             <a href="#">Education</a>
             <hr> <!--It is used to create a horizontal line that visually separates sections of content on a webpage.-->
             <a href="#">Projects</a>
@@ -38,7 +38,7 @@
     </div>
     <div class="overlay" id="overlay"></div>
     <div class="main-content"> 
-        <h1>Hey there 👋, Welcome to the about section where you will learn more about me</h1>
+        <h1>Hey there 👋, Welcome My Profile</h1>
         <p>
             My name is Letlhogonolo Mothoagae, I am a final year student at North West University (Mafikeng Campus) and I am currently enrolled for a BSc degree in Computer Science and Electronics.
             I am passionate about Tech and all things related to tech, I seek to become a full stack developer. I also have a love for Web Development, Cyber Security, Cloud Computing and Networks.
