--- a/about.html
+++ b/about.html
@@ -21,9 +21,9 @@
         <nav class="nav-links">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="#">Education</a>
+            <a href="education.html">Education</a>
             <hr> <!--It is used to create a horizontal line that visually separates sections of content on a webpage.-->
-            <a href="#">Projects</a>
+            <a href="projects.html">Projects</a>
             <a href="#">Certifications</a>
             <a href="#">Contact Details</a>
             <a href="#">Hobbies and Other Activities</a>
