--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
     </div>
     <div class="overlay" id="overlay"></div>
     <div class="main-content"> 
-        <h1>Hey there 👋, Welcome to the about section where you will learn more about me</h1>
+        <h1>Hey there 👋, Welcome to the about section.</h1>
         <p>
            <h3> Who am I? </h3>
             My name is Letlhogonolo Mothoagae, I am a student of life who in many ways is still paving his way through the world of technology. business and entrepreneurship. 
