--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <a href="education.html">Education</a>
             <hr> <!--It is used to create a horizontal line that visually separates sections of content on a webpage.-->
             <a href="projects.html">Projects</a>
-            <a href="#">Certifications</a>
+            <a href="certifications.html">Certifications</a>
             <a href="#">Contact Details</a>
             <a href="#">Hobbies and Other Activities</a>
             <hr>
