--- a/contactdetails.html
+++ b/contactdetails.html
@@ -25,7 +25,7 @@
             <hr> <!--It is used to create a horizontal line that visually separates sections of content on a webpage.-->
             <a href="projects.html">Projects</a>
             <a href="certifications.html">Certifications</a>
-            <a href="#">Contact Details</a>
+            <a href="contactdetails.html">Contact Details</a>
             <a href="#">Hobbies and Other Activities</a>
             <hr>
             <!--<div class="section-title"> Subscriptions</div>-->
