Add social media pages

--- a/index.html
+++ b/index.html
@@ -28,7 +28,19 @@
             <a href="#">Contact Details</a>
             <a href="#">Hobbies and Other Activities</a>
             <hr>
-            <!--<div class="section-title"> Subscriptions</div>-->
+            <div class="section-title"> Social Media</div>
+            <a href="https://github.com/IamLuckyT">
+                <img src="images/ghlogo.png" alt="">
+            </a>
+            <a href="https://www.linkedin.com/in/letlhogonolo-mothoagae-437b34171/">
+                <img src="images/linlogo.webp" alt="">
+            </a>
+            <a href="https://www.facebook.com/luckyt.mothoagae/">
+                <img src="images/fblogo.png" alt="">
+            </a>
+            <a href="https://www.facebook.com/luckyt.mothoagae/">
+                <img src="images/instalogo.jpg" alt="">
+            </a>
         </nav>
         
         <!--Moves the theme toggle button to the bottom-->
