Added more elements to the footer

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
     <div class="overlay" id="overlay"></div>
     <div class="main-content"> 
         <h1>Hey there 👋, Welcome to My Profile</h1>
+        <img src="images/myImg.jpg" alt="Profile Picture" class="profile-pic"> <!-- This is an image element that displays a profile picture. The "src" attribute specifies the path to the image file, and the "alt" attribute provides alternative text for the image in case it cannot be displayed. The "class" attribute assigns a CSS class to the image for styling purposes. -->
+        <p>
+            This is my personal profile page where I share my journey, skills, and interests in the world of technology.
+            Feel free to explore and connect with me through my social media links.
         <p>
             My name is Letlhogonolo Mothoagae, I am a final year student at North West University (Mafikeng Campus) and I am currently enrolled for a BSc degree in Computer Science and Electronics.
             I am passionate about Tech and all things related to tech, I seek to become a full stack developer. I also have a love for Web Development, Cyber Security, Cloud Computing and Networks.
@@ -63,7 +67,10 @@
         </p>
     </div> 
     <footer>
-        
+        <p>
+            © 2025 Letlhogonolo Mothoagae. All rights reserved.
+        </p>
+
     </footer>
 <script src="script.js"></script>
 </body>
