Added Image section for my profile picture

--- a/index.html
+++ b/index.html
@@ -49,12 +49,19 @@
     </div>
     </div>
     <div class="overlay" id="overlay"></div>
-    <div class="main-content"> 
+    <div class="hero">
+        <div class="text-content">
         <h1>Hey there 👋, Welcome to My Profile</h1>
-        <img src="images/myImg.jpg" alt="Profile Picture" class="profile-pic"> <!-- This is an image element that displays a profile picture. The "src" attribute specifies the path to the image file, and the "alt" attribute provides alternative text for the image in case it cannot be displayed. The "class" attribute assigns a CSS class to the image for styling purposes. -->
         <p>
             This is my personal profile page where I share my journey, skills, and interests in the world of technology.
-            Feel free to explore and connect with me through my social media links.
+            <button>Explore More</button>>
+        </p>
+        </div>
+        <div class="image-content">
+            <img src="images/myImg.jpg" alt="Profile Picture" class="profile-pic"> <!-- This is an image element that displays a profile picture. The "src" attribute specifies the path to the image file, and the "alt" attribute provides alternative text for the image in case it cannot be displayed. The "class" attribute assigns a CSS class to the image for styling purposes. -->
+        </div>
+    </div>
+    <div class="main-content"> 
         <p>
             My name is Letlhogonolo Mothoagae, I am a final year student at North West University (Mafikeng Campus) and I am currently enrolled for a BSc degree in Computer Science and Electronics.
             I am passionate about Tech and all things related to tech, I seek to become a full stack developer. I also have a love for Web Development, Cyber Security, Cloud Computing and Networks.
@@ -63,7 +70,6 @@
             which is a Property management business which focuses on providing NSFAS Accreditted Student Accommodations for North West University students.
            <br>
             To learn more about MTR VISION 30 <a href="mtrvision30.html">click here</a>.
-
         </p>
     </div> 
     <footer>
