--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     
     </header>
     <div class="sidebar" id="sidebar">  
-    <!--Moves the theme toggle button to the bottom-->
     <div class="theme-toggle-wrapper">
         <button id="theme-toggle" title="Toggle Dark Mode">🌓</button> <!-- This is used to setup the theme for dark and light mode -->
     </div>
@@ -54,7 +53,7 @@
         <h1>Hey there 👋, Welcome to My Profile</h1>
         <p>
             This is my personal profile page where I share my journey, skills, and interests in the world of technology.
-            <button>Explore More</button>>
+            <button>Explore More</button>
         </p>
         </div>
         <div class="image-content">
