Added social media links to the footer

--- a/index.html
+++ b/index.html
@@ -31,19 +31,8 @@
             <a href="#">Contact Details</a>
             <a href="#">Hobbies and Other Activities</a>
             <hr>
-            <div class="section-title"> Social Media</div>
-            <a href="https://github.com/IamLuckyT">
-                <img src="images/ghlogo.png" alt="">
-            </a>
-            <a href="https://www.linkedin.com/in/letlhogonolo-mothoagae-437b34171/">
-                <img src="images/linlogo.webp" alt="">
-            </a>
-            <a href="https://www.facebook.com/luckyt.mothoagae/">
-                <img src="images/fblogo.png" alt="">
-            </a>
-            <a href="https://www.facebook.com/luckyt.mothoagae/">
-                <img src="images/instalogo.jpg" alt="">
-            </a>
+            <!--<div class="section-title"> Social Media</div> -->
+
         </nav>
         
     </div>
@@ -72,9 +61,21 @@
         </p>
     </div> 
     <footer>
-        <p>
-            © 2025 Letlhogonolo Mothoagae. All rights reserved.
-        </p>
+        <div class="footer-content">
+            <p>
+                © 2025 Letlhogonolo Mothoagae. All rights reserved.
+            </p>
+            <div class="social-links">
+                <a href="https://github.com/IamLuckyT">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/letlhogonolo-mothoagae-437b34171/">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://www.facebook.com/luckyt.mothoagae/">
+                    <i class="fab fa-facebook"></i>
+                </a>
+        </div>
 
     </footer>
 <script src="script.js"></script>
