--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 <a href="https://www.facebook.com/luckyt.mothoagae/">
                     <i class="fab fa-facebook"></i>
                 </a>
+            </div>
         </div>
-
     </footer>
 <script src="script.js"></script>
 </body>
