--- a/mtrvision30.html
+++ b/mtrvision30.html
@@ -52,6 +52,24 @@
             <br>
         </p>
     </div> 
+    <footer>
+        <div class="footer-content">
+            <p>
+                © 2025 Letlhogonolo Mothoagae. All rights reserved.
+            </p>
+            <div class="social-links">
+                <a href="https://github.com/IamLuckyT">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/letlhogonolo-mothoagae-437b34171/">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://www.facebook.com/luckyt.mothoagae/">
+                    <i class="fab fa-facebook"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
 <script src="script.js"></script>
 </body>
 </html>
