--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                 © 2025 Letlhogonolo Mothoagae. All rights reserved.
             </p>
             <div class="social-links">
-                <a href="https://github.com/IamLuckyT">
-                    <i class="fab fa-github"></i>
-                </a>
+                <i class="fab fa-github">
+                <a href="https://github.com/IamLuckyT">    
+                </a></i>
                 <a href="https://www.linkedin.com/in/letlhogonolo-mothoagae-437b34171/">
                     <i class="fab fa-linkedin"></i>
                 </a>
