--- a/education.html
+++ b/education.html
@@ -46,6 +46,24 @@
 
         </p>
     </div> 
+    <footer>
+        <div class="footer-content">
+            <p>
+                © 2025 Letlhogonolo Mothoagae. All rights reserved.
+            </p>
+            <div class="social-links">
+                <i class="fab fa-github">
+                <a href="https://github.com/IamLuckyT">    
+                </a></i>
+                <a href="https://www.linkedin.com/in/letlhogonolo-mothoagae-437b34171/">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://www.facebook.com/luckyt.mothoagae/">
+                    <i class="fab fa-facebook"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
 <script src="script.js"></script>
 </body>
 </html>
