--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h1>Hey there 👋, Welcome to My Profile</h1>
         <p>
             This is my personal profile page where I share my journey, skills, and interests in the world of technology.
-            <button>Explore More</button>
+            <button class="glowing-button">Explore More</button>
         </p>
         </div>
         <div class="image-content">
