--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </p>
         </div>
         <div class="image-content">
-            <img src="images/myImg.jpg" alt="Profile Picture" class="profile-pic" width="150"> <!-- This is an image element that displays a profile picture. The "src" attribute specifies the path to the image file, and the "alt" attribute provides alternative text for the image in case it cannot be displayed. The "class" attribute assigns a CSS class to the image for styling purposes. -->
+            <img src="images/myImg.jpg" alt="Profile Picture" class="profile-pic"> <!-- This is an image element that displays a profile picture. The "src" attribute specifies the path to the image file, and the "alt" attribute provides alternative text for the image in case it cannot be displayed. The "class" attribute assigns a CSS class to the image for styling purposes. -->
         </div>
     </div>
     <div class="main-content"> 
